--- a/WebAppGlobantLucasAlvarez/pom.xml
+++ b/WebAppGlobantLucasAlvarez/pom.xml
@@ -15,12 +15,22 @@
     </properties>
     
     <dependencies>
+
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
